# C_compiler_orchestrated

./: .gitignore  .mc-dashboard-url  MISSION_STATE.md  README.md  events.jsonl  main.py  mission-control.db  mission-control.toml  mission_report.json  pyproject.toml
.cache/: intel_report.json
docs/: checkpoint-1.md
src/compiler/: __main__.py  ast_nodes.py  cfg.py  codegen.py  const_eval.py  ir.py  ir_gen.py  lexer.py  linker.py  liveness.py  optimizer.py  parser.py  peephole.py  preprocessor.py  regalloc.py  semantic.py  tokens.py
tests/: test_abi_struct_float.py  test_array_decay.py  test_ast_nodes.py  test_bitfield_union_variadic_edge.py  test_bitfields.py  test_bitwise_variadic.py  test_bool_edge.py  test_bool_type.py  test_bss_globals.py  test_builtin_headers.py  test_builtin_headers_ext.py  test_c89_compat.py  test_cast_global.py  test_cfg.py  test_cfg_dominators.py  test_cfg_edge_cases.py  test_cfg_optimizer_integration.py  test_chained_access.py  test_char_array_init.py  test_cli.py  test_codegen.py  test_codegen_abi_edge.py  test_codegen_copy_prop.py  test_codegen_correctness.py  test_codegen_dce.py  test_codegen_hardening.py  test_codegen_widths.py  test_comma_expr.py  test_compile_and_link.py  test_complex_decl_edge.py  test_complex_expr_edge.py  test_compound_literals.py  test_compound_member.py  test_compound_ternary_comma_edge.py  test_const_enforcement.py  test_const_eval.py  test_const_expr_eval.py  test_cross_feature_edge.py  test_designated_init.py  test_designated_init_edge.py  (+140 more)
tests/torture/: adapt_gcc_torture.py  baseline.json  runner.py  (+13 more)
(+311 files in other folders)
