[project]
name = "c-compiler-orchestrated"
version = "0.1.0"
description = "A C compiler built from scratch using autonomous AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src"]
